--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "react-bootstrap": "^1.4.3",
-    "react-modal": "^3.12.1"
+    "react-modal": "^3.12.1",
+    "vercel": "^21.0.1"
   }
 }
